@@ -7,16 +7,16 @@
 #include "fft_complex.h"
 
 int
-gsl_fft_complex_pass_6 (const gsl_complex from[],
-			gsl_complex to[],
-			const gsl_fft_direction sign,
-			const size_t product,
-			const size_t n,
-			const gsl_complex twiddle1[],
-			const gsl_complex twiddle2[],
-			const gsl_complex twiddle3[],
-			const gsl_complex twiddle4[],
-			const gsl_complex twiddle5[])
+fft_complex_pass_6 (const gsl_complex from[],
+		    gsl_complex to[],
+		    const gsl_fft_direction sign,
+		    const size_t product,
+		    const size_t n,
+		    const gsl_complex twiddle1[],
+		    const gsl_complex twiddle2[],
+		    const gsl_complex twiddle3[],
+		    const gsl_complex twiddle4[],
+		    const gsl_complex twiddle5[])
 {
 
   size_t i = 0, j = 0;
