@@ -7,17 +7,17 @@
 #include "fft_complex.h"
 
 int
-gsl_fft_complex_pass_7 (const gsl_complex from[],
-			gsl_complex to[],
-			const gsl_fft_direction sign,
-			const size_t product,
-			const size_t n,
-			const gsl_complex twiddle1[],
-			const gsl_complex twiddle2[],
-			const gsl_complex twiddle3[],
-			const gsl_complex twiddle4[],
-			const gsl_complex twiddle5[],
-			const gsl_complex twiddle6[])
+fft_complex_pass_7 (const gsl_complex from[],
+		    gsl_complex to[],
+		    const gsl_fft_direction sign,
+		    const size_t product,
+		    const size_t n,
+		    const gsl_complex twiddle1[],
+		    const gsl_complex twiddle2[],
+		    const gsl_complex twiddle3[],
+		    const gsl_complex twiddle4[],
+		    const gsl_complex twiddle5[],
+		    const gsl_complex twiddle6[])
 {
 
   size_t i = 0, j = 0;
