@@ -1,7 +1,7 @@
 #include <gsl_complex.h>
 
 int
-compare_complex_results (const char *name_a, const gsl_complex a[],
-			 const char *name_b, const gsl_complex b[],
+compare_complex_results (const char *name_a, const double a[],
+			 const char *name_b, const double b[],
 			 size_t n,
 			 const double allowed_ticks);
